--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>Лаба 2</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
 <header>
     <div class="logo">
@@ -17,7 +19,7 @@
             <div class="upblock">
                 <h3>&nbsp;Загальна інформація про котів</h3>
             </div>
-            <div class="downblock">
+            <div class ="downblock">
                 <div>
                     <h3 >Меню</h3>
                     <ol >
@@ -26,14 +28,43 @@
                     <li><a href="cats3.html">Page 4</a></li>
                     <li><a href="cats4.html">Page 5</a></li>
                     </ol>
+                    <form id = "InputForm">
+                        <input type="text" class="text" id="inputUserText"><br>
+                        <button type="button" id="Submitbtn"><b>Submit</b></button>
+                    </form>
+                    <form>
+                        <input type="checkbox" class="text" id="checkBtn2"><br>
+                    </form>
                 </div>
 
             </div>
         </div>
         <div class="centered">
-            <div class = "up">
-                <img src="cat.jpg">
+            <div id = "up">
+                <div>
+                    <p>
+                        Кіт(Felis) — рід хижих ссавців родини котових (Felidae). У деяких старіших системах класифікації до нього зараховували всіх представників малих кішок (Felinae), проте зараз безпосередньо до роду відносяться лише кілька видів невеликих тварин, що мешкають у Євразії та Африці.
+
+                        Найвідомішим представником цього роду є свійський кіт — підвид кота лісового.
+
+                         Азійський кіт (Prionailurus) походять від Євразійського прародителя що існував близько 6,2 мільйонів років тому, і що види Котів розділилися від 3,04 до 0.99 мільйонів років тому.
+                    </p>
+                    <div>
+                        <h3>Enter text:</h3>
+                        <form>
+                            <input type="text" class="text-area" id="text1"><br><br>
+                            <button type="button" id="btnSubmit"><b>Submit</b></button>
+                        </form>
+                        <form>
+                            <input type="checkbox" class="text" id="checkBtn1"><br>
+                        </form>
+                    </div>
+                </div>
+
+
+
             </div>
+
 
             <div class="down">
                 <p>&emsp;Кіт сві́йський, або кі́шка сві́йська (лат. Felis silvestris catus), як і його родич кіт дикий (лісовий) — невеликий ссавецьряду хижих (Carnivora) родини котових (Felidae).</p>
@@ -45,6 +76,9 @@
                 Загалом у світі нараховується близько 600 млн. (2015 рік) домашніх котів.
                 Коти приблизно одного розміру з іншими малими кішками, вони мають струнке тіло, гострі зуби, чудовий зір та нюх, добре пристосовані для полювання на менших тварин. Однак, коти, у порівнянні з дикими родичами, втратили смак до цукру, а певні популяції проявляють спадкову глухоту. Хоча коти полюють поодинці, вони є соціальними тваринами, що використовують численні засоби комунікації, у тому числі вокалізація, феромони, мову тіла.
             </p>
+            <form>
+                <input type="checkbox" class="text" id="checkBtn"><br>
+            </form>
         </div>
 
     </div>
@@ -56,5 +90,6 @@
     </div>
     <h1>Cats</h1>
 </footer>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
